get product in select tag

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,3 +30,4 @@ input[type=number] {
 
 /* ---------------- Loading Page-------------------- */
 @import url('../components/alert/Loading.css');
+@import url('../components/nuevo//productSelected.css');
